--- a/theme1/layout.html
+++ b/theme1/layout.html
@@ -56,7 +56,7 @@
             <div class="container">
                 <!-- Sidebar toggle button-->
                 <div class="navbar-header">
-                    <a href="../../index2.html" class="navbar-brand"><b>Favareto</b> Leilões</a>
+                    <a href="../../index2.html" class="navbar-brand"><b>SoftGT</b></a>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                         <i class="fa fa-bars"></i>
                     </button>
