--- a/theme1/layout.html
+++ b/theme1/layout.html
@@ -52,16 +52,16 @@
 <div class="wrapper">
 
     <header class="main-header">
-        <nav class="navbar navbar-static-top" role="navigation">
+        <nav class="navbar navbar-static-top">
             <div class="container">
-                <!-- Sidebar toggle button-->
+                <!-- Sidebar toggle button-->Roberto, se puder
                 <div class="navbar-header">
-                    <a href="../../index2.html" class="navbar-brand"><b>SoftGT</b></a>
+                    <a href="https://www.softgt.com.br" class="navbar-brand"><b>Soft</b>GT</a>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                         <i class="fa fa-bars"></i>
                     </button>
                 </div>
-                <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
+                <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         {MENU}
                     </ul>
