--- a/theme1/layout.html
+++ b/theme1/layout.html
@@ -54,7 +54,7 @@
     <header class="main-header">
         <nav class="navbar navbar-static-top">
             <div class="container">
-                <!-- Sidebar toggle button-->Roberto, se puder
+                <!-- Sidebar toggle button-->
                 <div class="navbar-header">
                     <a href="https://www.softgt.com.br" class="navbar-brand"><b>Soft</b>GT</a>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
